Fix: SonarQube's collectors maintainability issue